syntax = "proto3";

package dvbdump;

service ReceivesTelegrams {
  rpc receive_new (ReducedTelegram) returns (ReturnCode) {}
}

message ReducedTelegram {
    uint64 time_stamp = 1;
    uint32 position_id = 2;
    uint32 direction = 3;
    uint32 status = 4;
    uint32 line = 5;
    int32 delay = 6;
    uint32 destination_number = 7;
    uint32 run_number = 8;
    uint32 train_length = 9;
    uint32 region_code = 10;
}

message ReturnCode {
  int32 status = 1;
}
